testsuite/poke.pkl/add-f64-diag-2.pk
/* { dg-do compile } */

var res
  = 1L .+ 7U; /* { dg-error "mismatch between the width of LHS and RHS.*" } */
